<resources>
    <string name="app_name">JCalc</string>
    <string name="title_activity_tip_calc">TipCalcActivity</string>

    <string name="TipCalculator">Tip Calculator</string>
    <string name="About">About</string>

    <string name="shortcut_tipcalc_id">tip_calc</string>
    <string name="shortcut_tipcalc_label_short">TipCalc</string>
    <string name="shortcut_tipcalc_label_long">Tip Calculator</string>

    <string name="tooltip_new_feature_tipcalc_custom_percentage">Now you can enter a custom percentage!</string>
    <string name="tooltip_new_feature_tipcalc_tap_to_reset">Tap the subtotal to go back and enter a new value.</string>
    <string name="tooltip_new_feature_about_website">Tap the logo to check out our new website!</string>

    <string name="subtotal">Subtotal:</string>
    <string name="suggested_tips">Suggested Tip:</string>
    <string name="percent15">15%:</string>
    <string name="percent175">17.5%:</string>
    <string name="percent20">20%:</string>
    <string name="tip_custom_percent_default">25</string>
    <string name="percent">%:</string>
    <string name="tip_default_output">$0.00</string>
    <string name="tip_output">$%s</string>
    <string name="tip_enter_value">Enter a value before submitting</string>

    <string name="dismiss">Dismiss</string>
    <string name="whats_new_title_update">What\'s New</string>
    <string name="whats_new_title_first_install">Welcome to JCalc!</string>
    <string name="whats_new_text">JCalc %s\n\n%s</string>

    <string name="whats_new_update">Thanks for updating JCalc! This release includes a couple of enhancements to the Tip Calculator, including a custom percentage field. Also, a non-intrusive
        banner ad is being introduced to the bottom of the calculator screens. (Hey, a guy\'s gotta get paid! :)) Enjoy!</string>
    <string name="whats_new_first_install">I hope you enjoy the fun interface of a
        simple calculator. Be sure to check out the tip calculator when you go out to eat. I would
        appreciate hearing any feedback you have! Visit the about page for contact options. Enjoy!</string>

    <!-- Calculator Buttons -->
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_clear">C</string>
    <string name="button_clear_entry">CE</string>
    <string name="button_parenthesis_left">(</string>
    <string name="button_parenthesis_right">)</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_equals">=</string>
    <string name="button_decimal">.</string>
    <string name="button_tip_reset">X</string>
    <string name="button_tip_submit">✓</string>

    <!-- About -->
    <string name="title_activity_about">AboutActivity</string>

    <string name="about_jcalc">About JCalc</string>
    <string name="about_jcalc_version">Version %s</string>
    <string name="about_simple_calculator">JCalc is a simple calculator app.</string>
    <string name="about_jcalc_description">It started as a class assignment for my Software Engineering
        course. I decided I wanted to take it one step further and list it on Google Play.
        JCalc became my first published app!</string>
    <string name="about_jcalc_description_extra">JCalc now features a tip calculator to assist in
        calculating your restaurant bill. Plus, I\'m planning several additional features and improvements!</string>

    <string name="about_machone_description">Mach One Software is an independent project by Jordan Judt.</string>
    <string name="about_machone_mission">I strive to create high quality, easy-to-use software for all to enjoy.</string>
    <string name="about_contact">If you\'d like to request a feature or give feedback, tap one of the options below.</string>
    <string name="review_on_google">Google Play</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="email">Email</string>

    <!-- Image Content Descriptions -->
    <string name="jcalc_icon">JCalc icon</string>
    <string name="mach_one_software_logo">Mach One Software logo</string>
    <string name="google_play_icon">Google Play icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="email_icon">Email icon</string>

    <!-- Keys and IDs -->
    <string name="admob_app_id">ca-app-pub-1486657922060319~2940576112</string>
    <string name="admob_main_activity_unit_id">ca-app-pub-1486657922060319/5841646597</string>
    <string name="admob_tipcalc_activity_unit_id">ca-app-pub-1486657922060319/6233201283</string>
    <string name="admob_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>