<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.tipcalc.TipInputFragment"
    android:id="@+id/table_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/tipCalcButtonVerticalMargin">

        <Button
            android:id="@+id/seven"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_7"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/eight"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_8"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/nine"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_9"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/tipCalcButtonVerticalMargin">

        <Button
            android:id="@+id/four"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_4"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/five"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_5"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/six"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_6"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/tipCalcButtonVerticalMargin">

        <Button
            android:id="@+id/one"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_1"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/two"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_2"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/three"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_3"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/tipCalcButtonVerticalMargin">

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipCancelButton"
            android:fontFamily="casual"
            android:text="@string/button_tip_reset"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/zero"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipNumericButton"
            android:fontFamily="casual"
            android:text="@string/button_0"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

        <Button
            android:id="@+id/submit"
            android:layout_width="@dimen/tipCalcButtons"
            android:layout_height="@dimen/tipCalcButtons"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorTipAcceptButton"
            android:fontFamily="casual"
            android:text="@string/button_tip_submit"
            android:textColor="@color/colorTipButtonText"
            android:textSize="@dimen/buttonText"
            android:visibility="visible" />

    </TableRow>

</TableLayout>
