<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.machone.jcalc.view.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_7"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_8"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_9"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="3"
                android:layout_row="0"
                android:layout_weight="1"
                android:background="@color/colorMainClearButton"
                android:fontFamily="casual"
                android:text="@string/button_clear"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/clearEntryBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="4"
                android:layout_row="0"
                android:layout_weight="1"
                android:background="@color/colorMainClearButton"
                android:fontFamily="casual"
                android:text="@string/button_clear_entry"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_4"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_5"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_6"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/leftParenthBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="3"
                android:layout_row="1"
                android:layout_weight="1"
                android:background="@color/colorMainOperatorButton"
                android:fontFamily="casual"
                android:text="@string/button_parenthesis_left"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/rightParenthBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="4"
                android:layout_row="1"
                android:layout_weight="1"
                android:background="@color/colorMainOperatorButton"
                android:fontFamily="casual"
                android:text="@string/button_parenthesis_right"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_1"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_2"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="2"
                android:layout_row="2"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_3"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="3"
                android:layout_row="2"
                android:layout_weight="1"
                android:background="@color/colorMainOperatorButton"
                android:fontFamily="casual"
                android:text="@string/button_plus"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="4"
                android:layout_row="2"
                android:layout_weight="1"
                android:background="@color/colorMainOperatorButton"
                android:fontFamily="casual"
                android:text="@string/button_minus"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_weight="1"
                android:background="@color/colorMainNumericButton"
                android:fontFamily="casual"
                android:text="@string/button_0"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/decimalBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_weight="1"
                android:background="@color/colorMainDecimalButton"
                android:fontFamily="casual"
                android:text="@string/button_decimal"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/eqBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="2"
                android:layout_row="3"
                android:layout_weight="1"
                android:background="@color/colorMainEqualsButton"
                android:fontFamily="casual"
                android:text="@string/button_equals"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/multBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="3"
                android:layout_row="3"
                android:layout_weight="1"
                android:background="@color/colorMainOperatorButton"
                android:fontFamily="casual"
                android:text="@string/button_multiply"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

            <Button
                android:id="@+id/divBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/mainButtonHeight"
                android:layout_column="4"
                android:layout_row="3"
                android:layout_weight="1"
                android:background="@color/colorMainOperatorButton"
                android:fontFamily="casual"
                android:text="@string/button_divide"
                android:textColor="@color/colorMainButtonText"
                android:textSize="@dimen/buttonText" />

        </LinearLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/inputHeight"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:gravity="right"
            android:textAlignment="textEnd"
            android:textColor="@color/colorMainInputText"
            android:textSize="72sp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="8dp" />
    </HorizontalScrollView>


</android.support.constraint.ConstraintLayout>
